--- a/style/style.css
+++ b/style/style.css
@@ -569,12 +569,13 @@ hr{
 }
 .xbox__info{
    position: absolute;
-   text-align: center;
+   
 }
 .xbox__img{
     display: block;
     max-width: 100%;
     filter: drop-shadow(0px 4px 10px rgba(0, 0, 0, 0.25));
+    position: relative;
    
     
 }
@@ -594,10 +595,7 @@ hr{
     margin-left: 20px;
     color: var(--theme-text);
 }
-.xbox__btn{
-    margin: 293px 0 20px 20px;
-    
-}
+
 
 /* page */
 .page{
@@ -775,11 +773,7 @@ hr{
 
 
 
-@media(max-width: 1400px){
-.xbox__btn{
-    margin: 225px 0 20px 20px;
-    }
-}
+
 @media(max-width: 1200px){
     .info__grid{
         grid-template-columns: repeat(2, 1fr);
@@ -818,13 +812,15 @@ hr{
     .footer__img:nth-of-type(2){
         margin: 25px 0;
     }
-    .xbox__btn{
-        margin: 0;
+    .xbox__title{
+        line-height: 50px;
+        font-size: 35px;
     }
     .xbox__text{
         background: #ffffff;
         border-radius: 10px;
-        text-align: center;
+        line-height: 25px;
+        font-size: 20px;
     }
     .xbox__info{
         display: flex;
@@ -890,6 +886,9 @@ hr{
         flex-direction: column;
         align-items: center;
     }
+    .xbox__text{
+        display: none;
+    }
 
 }
 
@@ -944,20 +943,13 @@ hr{
     .footer-btn{
         max-width: 100%;
     }
-    .xbox{
-        margin-bottom: 75px;
-    }
+    
     .xbox__title{
-        /* font-size: 45px; */
-        color: orange;
-        margin-bottom: 70px;
+        margin-top: 0;
+        padding-bottom: 120px;
+    
     }
-    .xbox__text{
-        display: none;
-    }
-    .xbox__img{
-        ;
-    }
+    
 }
 
 @media(max-width: 570px){
@@ -1047,9 +1039,6 @@ hr{
         font-size: 25px;
         
     }
-    .xbox{
-        margin-bottom: 150px;
-    }
     .xbox__title{
         font-size: 45px;
      
@@ -1073,9 +1062,6 @@ hr{
         margin-left: 0;
         margin-right: 15px;} 
  
-    .xbox{
-        margin-bottom: 250px;
-    }
     .xbox__title{
         font-size: 25px;
     }
